Change Log
==========


2019-10-24 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* new regression test approach with better data isolation (#431)
* automatic identity rotate, speed up automats, fixes
* implemented coverage report in regression tests
* added BITDUST_LOG_USE_COLORS environment variable
* more bug fixes in several state machines
* run a handshake when add a friend



2019-10-17 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* starting with WebSocket API interface
* IDURL bug fix in proxy_router() (#429)
* rebuilding regression tests with a new approach (#427)
* set fast=True for all automats by default (#426)
* automatic identity rotate when my main ID server is down (#424)



2019-10-05 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* more smart events in list_files_orator() and index_synchronizer() (#422)
* make sure corresponding files are removed after api.key_erase() call  (#421)



2019-10-02 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* extended api.network_status() method with DHT details (#420)
* logging improvements (#419)
* running on Android, part 1  (#418)



2019-09-22 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* added "label" field to api.share_*() methods (#417)



2019-09-20 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* bug fix in proxy_router() machine
* bug fix in supplier_finder() machine
* added "services/employer/candidates" option
* added "keep_alive" parameter to online_status() automat
* increased ping timeouts and response time in few places
* bug fix in online_status() machine
* built new handshaker() automat
* improvements in supplier_connector()
* replaced propagate.PingContact() with online_status ping()/hanshake() methods
* bug fix in tcp transport
* solving issues with messaging
* make possible to set "label" for a key


